--- a/linkfree.html
+++ b/linkfree.html
@@ -11,45 +11,45 @@
     <h2>The following are references to useful resources to assist you downloading and using LinkFree</h2>
 
     <h3>
-        Jessica Chan <a href="https://coder-coder.com/about/" target="_blank">Coder-Coder</a> explains via her <a href="https://www.youtube.com/c/TheCoderCoder/featured" target="_blank">YouTube channel</a> Git &amp; GitHub and NPM
+        Jessica Chan, <a href="https://coder-coder.com/about/" target="_blank">Coder-Coder</a> explains via her <a href="https://www.youtube.com/c/TheCoderCoder/featured" target="_blank">YouTube channel</a> Git &amp; GitHub and NPM
     </h3>
-    <p>Git & GitHub explained for beginners <a href="https://www.youtube.com/watch?v=8Dd7KRpKeaE" target="_blank">click here</a></p>
-    <p>What is NPM, Tutorial for beginners <a href="https://www.youtube.com/watch?v=P3aKRdUyr0s" target="_blank">click here</a></p>
+    <p><a href="https://www.youtube.com/watch?v=8Dd7KRpKeaE" target="_blank">Git & GitHub explained for beginners</a></p>
+    <p><a href="https://www.youtube.com/watch?v=P3aKRdUyr0s" target="_blank">What is NPM, Tutorial for beginners</a></p>
 
     <hr>
-    <p>Download GitHub Desktop for your operating system <a href="https://desktop.github.com/" target="_blank">click here</a></p>
+    <p><a href="https://desktop.github.com/" target="_blank">Download GitHub Desktop</a> for your operating system</p>
     <p>install GitHub Desktop, how-to videos for:
         <ul>
-            <li>&#8208; Mac via Meeun <a href="https://www.youtube.com/watch?v=C0n6O4d0ccw" target="_blank">click here</a></li>
-            <li>&#8208; Windows via CoderCoder <a href="https://www.youtube.com/watch?v=8Dd7KRpKeaE" target="_blank">click here</a></li>
-            <li>&#8208; Linux via Tech Solution With Jayesh <a href="https://www.youtube.com/watch?v=BFgzym_Ddac" target="_blank">click here</a></li>
+            <li><a href="https://www.youtube.com/watch?v=C0n6O4d0ccw" target="_blank">MacOS</a> via Meeun</li>
+            <li><a href="https://www.youtube.com/watch?v=8Dd7KRpKeaE" target="_blank">Windows</a> via Coder-Coder</li>
+            <li><a href="https://www.youtube.com/watch?v=BFgzym_Ddac" target="_blank">Linux</a> via Tech Solution with Jayesh</li>
         </ul>
     </p>
 
     <hr>
-    <p>Download Node.js <a href="https://nodejs.org/en/" target="_blank">click here</a></p>
+    <p> <a href="https://nodejs.org/en/" target="_blank">Download Node.js</a></p>
     <p>install the LTS version for your operating system, how-to videos for:
         <ul>
-            <li>&#8208; Mac via Tech-Time <a href="https://www.youtube.com/watch?v=SwUKKCS3r3c" target="_blank">click here</a></li>
-            <li>&#8208; Windows via CoderCoder <a href="https://www.youtube.com/watch?v=P3aKRdUyr0s" target="_blank">click here</a></li>
-            <li>&#8208; Linux via CodeWithArjun <a href="https://www.youtube.com/watch?v=P6rPI7x28nY" target="_blank">click here</a></li>
+            <li><a href="https://www.youtube.com/watch?v=SwUKKCS3r3c" target="_blank">MacOS</a> via Tech-Time</li>
+            <li><a href="https://www.youtube.com/watch?v=P3aKRdUyr0s" target="_blank">Windows</a> via CoderCoder</li>
+            <li><a href="https://www.youtube.com/watch?v=P6rPI7x28nY" target="_blank">Linux</a> via CodeWithArjun</li>
         </ul>
     </p>
     <p>Node Version Manager NVM information
         <ul>
-            <li>&#8208; Linux/Mac <a href="https://www.github.com/nvm-sh/nvm" target="_blank">click here</a></li>
-            <li>&#8208; Windows <a href="https://www.github.com/coreybutler/nvm-windows" target="_blank">click here</a></li>
+            <li><a href="https://www.github.com/nvm-sh/nvm" target="_blank">Linux/MacOS</a></li>
+            <li><a href="https://www.github.com/coreybutler/nvm-windows" target="_blank">Windows</a></li>
             
         </ul>
     
     </p>
     <hr>
-    <p>Download VSCode IDE <a href="https://code.visualstudio.com/Download" target="_blank">click here</a></p>
+    <p><a href="https://code.visualstudio.com/Download" target="_blank">Download VSCode IDE</a></p>
     <p>Install VSCode Editor how-to videos for:
         <ul>
-            <li>&#8208; Mac via Tech Decode Tutorials (0min->2min) <a href="https://www.youtube.com/watch?v=bJaBHGKHv9A" target="_blank">click here</a></li>
-            <li>&#8208; Windows via ProgrammingKnowledge (0min->3min) <a href="https://www.youtube.com/watch?v=MlIzFUI1QGA" target="_blank">click here</a></li>
-            <li>&#8208; Linux via ProgrammingKnowledge (0min->3min) <a href="https://www.youtube.com/watch?v=Y1fei1mzP7Q" target="_blank">click here</a></li>
+            <li><a href="https://www.youtube.com/watch?v=bJaBHGKHv9A" target="_blank">MacOS</a> via Tech Decode Tutorials (0min->2min)</li>
+            <li><a href="https://www.youtube.com/watch?v=MlIzFUI1QGA" target="_blank">Windows</a> via ProgrammingKnowledge (0min->3min)</li>
+            <li><a href="https://www.youtube.com/watch?v=Y1fei1mzP7Q" target="_blank">Linux</a> via ProgrammingKnowledge (0min->3min)</li>
         </ul>
     </p>
 
